Bug 53189 - SVG animation doesn't support calcMode discrete for number and color values.
Summary: SVG animation doesn't support calcMode discrete for number and color values.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL: http://dev.w3.org/SVG/profiles/1.1F2/...
Keywords:
Depends on:
Blocks: 41761
  Show dependency treegraph
 
Reported: 2011-01-26 13:22 PST by Dirk Schulze
Modified: 2011-01-27 11:25 PST (History)
1 user (show)

See Also:


Attachments
Patch (12.58 KB, patch)
2011-01-26 14:19 PST, Dirk Schulze
zimmermann: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Schulze 2011-01-26 13:22:14 PST
SVG animation doesn't support calcMode discrete for number and color values.
Comment 1 Dirk Schulze 2011-01-26 13:24:04 PST
Can be seen in the link above, the rect size should jump and not be animated.
Comment 2 Dirk Schulze 2011-01-26 14:19:35 PST
Created attachment 80236 [details]
Patch
Comment 3 Nikolas Zimmermann 2011-01-27 02:24:19 PST
Comment on attachment 80236 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=80236&action=review

r=me.

> Source/WebCore/svg/SVGAnimateElement.cpp:103
> +    bool isInFirstHalfOfAnimation = percentage < 0.5;

0.5f?

> LayoutTests/svg/animations/script-tests/animate-color-calcMode-discrete.js:38
> +        ["animation", 0.001,    "rect", sample1],

Formatting, you should lign up the "rect" lines.
Comment 4 Dirk Schulze 2011-01-27 11:25:19 PST
Committed r76819: <http://trac.webkit.org/changeset/76819>