2011-01-27  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG animation doesn't support calcMode discrete for number and color values.
        https://bugs.webkit.org/show_bug.cgi?id=53189

        Add support for calcMode discrete on number and color animation.

        Tests: svg/animations/animate-color-calcMode-discrete.html
               svg/animations/animate-number-calcMode-discrete.html

        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::calculateAnimatedValue):
2011-01-27  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG animation doesn't support calcMode discrete for number and color values.
        https://bugs.webkit.org/show_bug.cgi?id=53189

        Test for correct behavior on animating numbers and colors with calcMode discrete.

        * svg/animations/animate-color-calcMode-discrete-expected.txt: Added.
        * svg/animations/animate-color-calcMode-discrete.html: Added.
        * svg/animations/animate-number-calcMode-discrete-expected.txt: Added.
        * svg/animations/animate-number-calcMode-discrete.html: Added.
        * svg/animations/script-tests/animate-color-calcMode-discrete.js: Added.
        (sample1):
        (sample2):
        (executeTest):
        * svg/animations/script-tests/animate-number-calcMode-discrete.js: Added.
        (sample1):
        (sample2):
        (executeTest):


Canonical link: https://commits.webkit.org/67037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76819 268f45cc-cd09-0410-ab3c-d52691b4dbfc